Update api doc and alight api
